Fixed alignment issue in landing page H1

--- a/app/webpacker/styles/components/campaign-hero.scss
+++ b/app/webpacker/styles/components/campaign-hero.scss
@@ -79,6 +79,8 @@
       @include font-size(xxlarge);
 
       padding: .05rem .7rem;
+      -webkit-box-decoration-break: clone;
+      box-decoration-break: clone;
     }
 
     span:last-of-type {
